--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "ts-node": "^10.9.2",
     "use-debounce": "^10.0.4",
     "uuid": "^10.0.0",
+    "xlsx": "^0.18.5",
     "zod": "^3.23.8"
   },
   "devDependencies": {
