--- a/package.json
+++ b/package.json
@@ -69,7 +69,9 @@
     "react-hook-form": "^7.53.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.3.0",
+    "react-markdown": "^10.1.0",
     "recharts": "^2.15.3",
+    "remark-gfm": "^4.0.1",
     "resend": "^4.0.0",
     "shadcn": "^2.5.0",
     "sonner": "^1.5.0",
