--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "next": "^15.3.3",
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.3.0",
+    "nodemailer": "^6.10.1",
     "oidc-token-hash": "^5.1.0",
     "openai": "^5.20.0",
     "papaparse": "^5.5.3",
@@ -72,7 +73,6 @@
     "react-markdown": "^10.1.0",
     "recharts": "^2.15.3",
     "remark-gfm": "^4.0.1",
-    "resend": "^4.0.0",
     "shadcn": "^2.5.0",
     "sonner": "^1.5.0",
     "swr": "^2.3.3",
@@ -87,6 +87,7 @@
   "devDependencies": {
     "@faker-js/faker": "^9.7.0",
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.2",
     "@types/quoted-printable": "^1.0.2",
     "@types/react": "^18",
     "@types/react-dom": "^18",
