--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.6.0",
-    "@headlessui/react": "^2.2.1",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^3.9.0",
     "@modelcontextprotocol/sdk": "^1.18.1",
@@ -41,63 +40,52 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/date-fns": "^2.5.3",
     "@upstash/redis": "^1.34.8",
-    "add": "^2.0.6",
-    "axios": "^1.11.0",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "csv-parse": "^5.6.0",
     "csv-parser": "^3.2.0",
+    "csv-stringify": "^6.6.0",
     "date-fns": "^3.6.0",
-    "date-range": "^0.0.2",
-    "dotenv": "^17.2.1",
     "exceljs": "^4.4.0",
-    "faker": "^6.6.6",
     "framer-motion": "^12.7.2",
+    "glob": "^11.0.3",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.447.0",
     "next": "^15.3.3",
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.10.1",
-    "oidc-token-hash": "^5.1.0",
+    "open": "^10.2.0",
     "openai": "^5.20.0",
     "papaparse": "^5.5.3",
-    "quoted-printable": "^1.0.1",
     "react": "^18.3.1",
-    "react-csv": "^2.2.2",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.53.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.3.0",
-    "react-markdown": "^10.1.0",
     "recharts": "^2.15.3",
-    "remark-gfm": "^4.0.1",
     "resend": "^6.1.2",
     "sass": "^1.93.2",
-    "shadcn": "^2.5.0",
     "sonner": "^1.5.0",
-    "swr": "^2.3.3",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7",
     "ts-node": "^10.9.2",
-    "use-debounce": "^10.0.4",
     "uuid": "^10.0.0",
     "xlsx": "^0.18.5",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@faker-js/faker": "^9.7.0",
+    "@next/bundle-analyzer": "^15.5.5",
     "@types/node": "^20",
     "@types/nodemailer": "^7.0.2",
-    "@types/quoted-printable": "^1.0.2",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/uuid": "^10.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.14",
-    "postcss": "^8",
     "prisma": "^6.9.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
