--- a/package.json
+++ b/package.json
@@ -84,6 +84,8 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/uuid": "^10.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.43.0",
+    "@typescript-eslint/parser": "^8.43.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.14",
     "prisma": "^6.9.0",
