--- a/package.json
+++ b/package.json
@@ -79,8 +79,10 @@
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^15.5.5",
+    "@types/lodash": "^4.17.23",
     "@types/node": "^20",
     "@types/nodemailer": "^7.0.2",
+    "@types/papaparse": "^5.5.2",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/uuid": "^10.0.0",
