--- a/.env-te
+++ b/.env-te
@@ -1,6 +1,11 @@
-# Database (Supabase)
-DATABASE_URL=postgresql://postgres.srrdkqjfynsdoqlxsohi:KRNvRbbCMWpap69b@aws-0-eu-central-1.pooler.supabase.com:5432/postgres
-DIRECT_URL=postgresql://postgres:KRNvRbbCMWpap69b@db.srrdkqjfynsdoqlxsohi.supabase.co:5432/postgres
+# Production optimizacije
+NODE_ENV=production
+NEXT_TELEMETRY_DISABLED=1
+NODE_OPTIONS=--max-old-space-size=512
+
+# Database - sa connection pooling
+DATABASE_URL="postgresql://postgres.srrdkqjfynsdoqlxsohi:KRNvRbbCMWpap69b@aws-0-eu-central-1.pooler.supabase.com:5432/postgres?pgbouncer=true&connection_limit=5&pool_timeout=10"
+DIRECT_URL="postgresql://postgres:KRNvRbbCMWpap69b@db.srrdkqjfynsdoqlxsohi.supabase.co:5432/postgres"
 
 # NextAuth - VAŽNO: Promeni na tvoju Hostinger domenu
 NEXTAUTH_URL=https://finappsolutions.com
