--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "next-auth-template",
-  "version": "0.1.0",
+  "name": "Fin-App-Hub",
+  "version": "1.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
     "seed": "ts-node prisma/seed.ts",
@@ -53,16 +53,16 @@
     "glob": "^11.0.3",
     "lodash": "^4.17.21",
     "lucide-react": "^0.447.0",
-    "next": "^16.1.6",
+    "next": "15.1.6",
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.10.1",
     "open": "^10.2.0",
     "openai": "^5.20.0",
     "papaparse": "^5.5.3",
-    "react": "^18.3.1",
+    "react": "^19.0.0",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^18.3.1",
+    "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.53.0",
     "react-hot-toast": "^2.5.2",
@@ -79,18 +79,18 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "^15.5.5",
+    "@next/bundle-analyzer": "^15.1.6",
     "@types/lodash": "^4.17.23",
     "@types/node": "^20",
     "@types/nodemailer": "^7.0.2",
     "@types/papaparse": "^5.5.2",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^8.43.0",
     "@typescript-eslint/parser": "^8.43.0",
     "eslint": "^8",
-    "eslint-config-next": "14.2.14",
+    "eslint-config-next": "15.1.6",
     "prisma": "^6.9.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
