--- a/package.json
+++ b/package.json
@@ -76,10 +76,10 @@
     "ts-node": "^10.9.2",
     "uuid": "^10.0.0",
     "xlsx": "^0.18.5",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "@next/bundle-analyzer": "^15.1.6"
   },
-  "devDependencies": {
-    "@next/bundle-analyzer": "^15.1.6",
+  "devDependencies": {    
     "@types/lodash": "^4.17.23",
     "@types/node": "^20",
     "@types/nodemailer": "^7.0.2",
