--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Fin-App-Hub",
-  "version": "1.1.0",
+  "name": "next-auth-template",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -11,7 +11,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^2.6.0",
+    "@auth/prisma-adapter": "^2.7.4",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^3.9.0",
     "@modelcontextprotocol/sdk": "^1.18.1",
@@ -39,7 +39,6 @@
     "@react-email/render": "^2.0.4",
     "@tanstack/react-table": "^8.21.3",
     "@types/bcryptjs": "^2.4.6",
-    "@types/date-fns": "^2.5.3",
     "@upstash/redis": "^1.34.8",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
@@ -47,41 +46,40 @@
     "csv-parse": "^5.6.0",
     "csv-parser": "^3.2.0",
     "csv-stringify": "^6.6.0",
-    "date-fns": "^3.6.0",
+    "date-fns": "^4.1.0",
     "exceljs": "^4.4.0",
     "framer-motion": "^12.7.2",
     "glob": "^11.0.3",
     "lodash": "^4.17.21",
-    "lucide-react": "^0.447.0",
-    "next": "15.1.6",
-    "next-auth": "^5.0.0-beta.25",
-    "next-themes": "^0.3.0",
+    "lucide-react": "^0.468.0",
+    "next": "^16.1.6",
+    "next-auth": "^5.0.0",
+    "next-themes": "^0.4.4",
     "nodemailer": "^6.10.1",
     "open": "^10.2.0",
     "openai": "^5.20.0",
     "papaparse": "^5.5.3",
     "react": "^19.0.0",
-    "react-day-picker": "^8.10.1",
+    "react-day-picker": "^9.4.4",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
-    "react-hook-form": "^7.53.0",
+    "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.3.0",
     "recharts": "^2.15.3",
     "resend": "^6.1.2",
     "sass": "^1.93.2",
-    "sonner": "^1.5.0",
-    "tailwind-merge": "^2.5.3",
+    "sonner": "^1.7.3",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "ts-node": "^10.9.2",
-    "uuid": "^10.0.0",
+    "uuid": "^11.0.5",
     "xlsx": "^0.18.5",
-    "zod": "^3.23.8",
-    "@next/bundle-analyzer": "^15.1.6"
+    "zod": "^3.24.1"
   },
-  "devDependencies": {    
+  "devDependencies": {
     "@types/lodash": "^4.17.23",
-    "@types/node": "^20",
+    "@types/node": "^22",
     "@types/nodemailer": "^7.0.2",
     "@types/papaparse": "^5.5.2",
     "@types/react": "^19",
@@ -89,10 +87,10 @@
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^8.43.0",
     "@typescript-eslint/parser": "^8.43.0",
-    "eslint": "^8",
-    "eslint-config-next": "15.1.6",
+    "eslint": "^9",
+    "eslint-config-next": "16.1.6",
     "prisma": "^6.9.0",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
 }
