--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@radix-ui/react-tabs": "^1.1.4",
     "@radix-ui/react-toast": "^1.2.7",
     "@radix-ui/react-tooltip": "^1.2.4",
+    "@radix-ui/react-visually-hidden": "^1.2.4",
     "@react-email/render": "^2.0.4",
     "@tanstack/react-table": "^8.21.3",
     "@types/bcryptjs": "^2.4.6",
@@ -53,9 +54,9 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.468.0",
     "next": "^16.1.6",
-    "next-auth": "^5.0.0",
+    "next-auth": "^5.0.0-beta.30",
     "next-themes": "^0.4.4",
-    "nodemailer": "^6.10.1",
+    "nodemailer": "^7.0.13",
     "open": "^10.2.0",
     "openai": "^5.20.0",
     "papaparse": "^5.5.3",
@@ -78,6 +79,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^16.1.6",
     "@types/lodash": "^4.17.23",
     "@types/node": "^22",
     "@types/nodemailer": "^7.0.2",
