--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "recharts": "^2.15.3",
     "resend": "^6.1.2",
     "sass": "^1.93.2",
+    "server-only": "^0.0.1",
     "sonner": "^1.7.3",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
