--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,6 +38,10 @@
   ],
   "exclude": [
     "node_modules",
-    "scripts/vas-import/getOrCreateContract11.tsx"
+    "scripts/vas-import/getOrCreateContract11.tsx",
+    ".next",
+    "out",
+    "dist",
+    "public/reports"
   ]
 }
