--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next-auth-template",
+  "name": "fin-app-hub",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,14 +8,15 @@
     "start": "next start",
     "lint": "next lint",
     "seed": "ts-node prisma/seed.ts",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "tree": "node scripts/generate-tree.js"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.4",
-    "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^3.9.0",
     "@modelcontextprotocol/sdk": "^1.18.1",
     "@prisma/client": "^6.9.0",
+
     "@radix-ui/react-alert-dialog": "^1.1.7",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.2.3",
@@ -34,9 +35,9 @@
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.4",
-    "@radix-ui/react-toast": "^1.2.7",
     "@radix-ui/react-tooltip": "^1.2.4",
     "@radix-ui/react-visually-hidden": "^1.2.4",
+
     "@react-email/render": "^2.0.4",
     "@tanstack/react-table": "^8.21.3",
     "@types/bcryptjs": "^2.4.6",
@@ -44,10 +45,10 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "critters": "^0.0.23",
+
     "csv-parse": "^5.6.0",
-    "csv-parser": "^3.2.0",
     "csv-stringify": "^6.6.0",
+
     "date-fns": "^4.1.0",
     "exceljs": "^4.4.0",
     "framer-motion": "^12.7.2",
@@ -58,7 +59,6 @@
     "next-auth": "^5.0.0-beta.30",
     "next-themes": "^0.4.4",
     "nodemailer": "^7.0.13",
-    "open": "^10.2.0",
     "openai": "^5.20.0",
     "papaparse": "^5.5.3",
     "react": "^19.0.0",
@@ -66,11 +66,9 @@
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.54.2",
-    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.3.0",
     "recharts": "^2.15.3",
     "resend": "^6.1.2",
-    "sass": "^1.93.2",
     "server-only": "^0.0.1",
     "sonner": "^1.7.3",
     "tailwind-merge": "^2.6.0",
@@ -89,8 +87,6 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/uuid": "^10.0.0",
-    "@typescript-eslint/eslint-plugin": "^8.43.0",
-    "@typescript-eslint/parser": "^8.43.0",
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
     "prisma": "^6.9.0",
