--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@hookform/resolvers": "^3.9.0",
     "@modelcontextprotocol/sdk": "^1.18.1",
     "@prisma/client": "^6.9.0",
-
     "@radix-ui/react-alert-dialog": "^1.1.7",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.2.3",
@@ -37,18 +36,18 @@
     "@radix-ui/react-tabs": "^1.1.4",
     "@radix-ui/react-tooltip": "^1.2.4",
     "@radix-ui/react-visually-hidden": "^1.2.4",
-
     "@react-email/render": "^2.0.4",
     "@tanstack/react-table": "^8.21.3",
     "@types/bcryptjs": "^2.4.6",
-    "@upstash/redis": "^1.34.8",
+    "@upstash/ratelimit": "^2.0.8",
+    "@upstash/redis": "^1.36.2",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-
+    "critters": "^0.0.23",
     "csv-parse": "^5.6.0",
+    "csv-parser": "^3.2.0",
     "csv-stringify": "^6.6.0",
-
     "date-fns": "^4.1.0",
     "exceljs": "^4.4.0",
     "framer-motion": "^12.7.2",
@@ -59,6 +58,7 @@
     "next-auth": "^5.0.0-beta.30",
     "next-themes": "^0.4.4",
     "nodemailer": "^7.0.13",
+    "open": "^11.0.0",
     "openai": "^5.20.0",
     "papaparse": "^5.5.3",
     "react": "^19.0.0",
